Refactor `WandbLogger` Add support for custom stats logging

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,7 @@ python_requires = >=3.6
 
 [options.entry_points]
 spacy_loggers =
+    spacy.WandbLogger.v5 = spacy_loggers.wandb:wandb_logger_v5
     spacy.WandbLogger.v4 = spacy_loggers.wandb:wandb_logger_v4
     spacy.WandbLogger.v3 = spacy_loggers.wandb:wandb_logger_v3
     spacy.WandbLogger.v2 = spacy_loggers.wandb:wandb_logger_v2
